# OOP_Project

./: Doxyfile
StoreHouse/: Batch.cpp  CMakeLists.txt  Date.cpp  Date.h  DynamicArray.hpp  IdGenerator.cpp  IdGenerator.h  Main.cpp  Product.cpp  Product.h  Section.h  Shelf.h  TextContainer.cpp  TextContainer.h  UI.cpp  UI.h  WareHouseLogic.cpp  WareHouseLogic.h
StoreHouse/Data/: Batch.cpp  Batch.h  Date.cpp  Date.h  Product.cpp  Product.h  Section.cpp  Section.h  Shelf.cpp  Shelf.h
StoreHouse/Logic/: Constants.cpp  Constants.h  DynamicArray.hpp  TextContainer.cpp  TextContainer.h  WareHouseLogic.cpp  WareHouseLogic.h
StoreHouse/Tests/: Test.cpp
StoreHouse/UI/: UI.cpp  UI.h
html/: _batch_8h_source.html  _constants_8h_source.html  _date_8h_source.html  _dynamic_array_8hpp_source.html  _product_8h_source.html  _section_8h_source.html  _shelf_8h_source.html  _text_container_8h_source.html  _u_i_8h_source.html  _ware_house_logic_8h_source.html  annotated.html  annotated_dup.js  class_batch-members.html  class_batch.html  class_constants-members.html  class_constants.html  class_date-members.html  class_date.html  class_dynamic_array-members.html  class_dynamic_array.html  class_product-members.html  class_product.html  class_product.js  class_section-members.html  class_section.html  class_section.js  class_shelf-members.html  class_shelf.html  class_test-members.html  class_test.html  class_test.js  class_text_container-members.html  class_text_container.html  class_text_container.js  class_u_i-members.html  class_u_i.html  class_warehouse_logic-members.html  class_warehouse_logic.html  classes.html  (+30 more)
latex/: _batch_8h_source.tex  (+24 more)
(+11 files in other folders)
